Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58833

3D text example crashes in assert

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.9
    • Qt3D
    • None
    • 88b24df43916442785238966d5a3c3eb77b2d097

      The example is crashing at startup in assert and after adding check for the error condition, the text is garbled.

      The QText3DGeometry is using 16-bit indices, but the qTriangulate function being used to convert text to polygons is returning 32-bit data.

        For Gerrit Dashboard: QTBUG-58833
        # Subject Branch Project Status CR V

            veshivas Venugopal Shivashankar
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes