Fix crash when running 3d-text example

Change the text geometry to use 32-bit index buffer. qTriangulate is
using them, which causes the index buffer copy to cause a mess. Also
long texts could easily cause vertex buffers with more than
65536 vertices to be generated. Also add check for empty outlines.

Task-number: QTBUG-58833
Change-Id: I5ad84081000e6b178a81d6d107aa013f29a95ac5
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>